# djangocourse

./: .dockerignore  .env.docker  .gitignore  docker-compose.yaml  dockerfile  package-lock.json  package.json  pyproject.toml  tailwindcss.config.js
app/: admin.py  managers.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_create_superuser.py  0003_alter_article_word_count.py  0004_article_creator.py  0005_alter_article_options_alter_article_content_and_more.py  0006_alter_userprofile_managers_alter_userprofile_email.py  0007_auto_20250611_1941.py
djangocourse/: settings.py  urls.py
locale/es/LC_MESSAGES/: django.mo  django.po
static/: input.css  output.css
templates/: base.html
templates/account/: login.html  signup.html
templates/allauth/elements/: button.html  field.html  provider.html
templates/allauth/layouts/: base.html
templates/app/: article_create.html  article_delete.html  article_update.html  base.html  home.html
templates/app/layouts/: base_form.html
templates/registration/: login.html
