[project]
name = "djangocourse"
version = "0.1.0"
description = ""
authors = [
    {name = "example",email = "example@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "django-allauth[socialaccount] (>=65.8.1,<66.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "dj-database-url (>=2.3.0,<3.0.0)",
]

[tool.poetry]
packages = [{include = "djangocourse", from = "src"}]


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^5.2.0"
django-browser-reload = "^1.18.0"
django-widget-tweaks = "^1.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
